Adjust body padding for improved layout consistency

--- a/ckanext/cioos_theme/public/cioos_theme.css
+++ b/ckanext/cioos_theme/public/cioos_theme.css
@@ -525,7 +525,7 @@ body {
   color: #404041;
   background-color: #c6e3df;
   border-color: #c6e3df;
-  padding: 0 30px 10px !important;
+  padding: 8px 30px !important;
   margin: 0 30px;
 }
 
