--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -24,6 +24,7 @@ $teenwidth: 100%;
   font-size: 16px;
   color: #333333;
   max-width: 212px;
+  width: 100%;
   word-break: break-word;
   display: inline-block;
   margin: 0;
@@ -39,7 +40,6 @@ $teenwidth: 100%;
   background-color: white;
   border-radius: 3px;
   min-height: 75px;
-  height: 275px;
 }
 
 .media-item .media-image {
@@ -54,8 +54,8 @@ $teenwidth: 100%;
 }
 
 .media-item .item-count {
-  margin: 28px 10px;
-  float: right;
+  margin-top: 4px;
+  float: left;
 }
 
 .media-grid {
