--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -46,8 +46,8 @@ $teenwidth: 100%;
   margin: 0;
   padding: 0 0 10px 0;
   display: unset;
-  max-width: 135px;
-  max-height: 135px;
+  width: 135px;
+  height: 135px;
   align-items: center; /* vertical center */
   justify-content: center; /* horizontal center */
   object-fit: contain;
