--- a/ckanext/cioos_theme/public/cioos_theme.css
+++ b/ckanext/cioos_theme/public/cioos_theme.css
@@ -33,8 +33,11 @@
 }
 
 .media-item .item-count {
-  margin-top: 4px;
-  float: left;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  margin: 0;
+  float: none;
 }
 
 .media-grid {
