--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -9,6 +9,7 @@ $darkestblack: rgba(
 ); //the darkest black used for font color and body copy
 $lighttextcolor: lighten($darkestblack, 95%); //white text #ffffff
 $navbg: #52a79b; //Dark blue, behind nav area, behind share logos #1c4552
+$accent: #fa7268;
 
 //Fullscreen
 $papabreak: 1140px;
@@ -719,13 +720,13 @@ ul.formats {
 
 .form-control {
   border-radius: 30px;
-  border-color: #fa7268;
+  border-color: $accent;
 }
 
 .search-form .search-input.search-giant button {
   top: 15px;
   right: 15px;
-  background: #fa7268;
+  background: $accent;
   border-radius: 27px;
   width: 54px;
   height: 100%;
@@ -756,16 +757,16 @@ ul.formats {
 }
 
 .title h2 span {
-  color: #fa7268;
+  color: $accent;
 }
 
 .title h2 span a {
-  color: #fa7268;
+  color: $accent;
   text-decoration: none;
 }
 
 .title h2 span a:hover {
-  color: #fa7268;
+  color: $accent;
   text-decoration: none;
 }
 
@@ -831,8 +832,8 @@ div.search-input-group {
 .search-input-group .btn {
   position: absolute;
   right: 0;
-  border-color: #fa7268;
-  background: #fa7268;
+  border-color: $accent;
+  background: $accent;
   border-radius: 23px;
   width: 46px;
   height: 100%;
@@ -843,7 +844,7 @@ div.search-input-group {
 }
 
 .search-form .search-input-group button {
-  border-color: #fa7268;
+  border-color: $accent;
 }
 
 .search-form .search-input-group button i {
@@ -1595,5 +1596,42 @@ section {
     border-bottom: #ddd solid 1px;
   }
 }
+
+#mc-embedded-subscribe {
+  background-color: $accent;
+  text-transform: uppercase;
+  font-size: 12px;
+  height: 100%;
+  line-height: 28px;
+  margin: 0 5px 10px 0;
+  padding: 0 22px;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: top;
+  white-space: nowrap;
+  width: auto;
+  font-weight: normal;
+  border: 0 none;
+  border-radius: 4px;
+  transition: all 0.23s ease-in-out 0s;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-block;
+  clear: both;
+}
+
+#mce-EMAIL {
+  border: 1px solid white;
+  padding: 5px 20px;
+  display: block;
+  width: 100%;
+  text-indent: 2%;
+  background: rgba(47, 47, 47, 0.1);
+  border-radius: 3px;
+  float: left;
+  color: #3d3d3d;
+  font-family: Raleway, Helvetica, Arial;
+}
+
 
 @import url(//fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900|Quicksand:300,400,600,700|PT+Sans:400|Raleway:300,400,600,700);
