--- a/ckanext/cioos_theme/templates/base.html
+++ b/ckanext/cioos_theme/templates/base.html
@@ -10,69 +10,80 @@
 <!--<![endif]-->
 {%- endblock -%}
 
-  <head {% block headtag %}{% endblock %}>
-    {%- block meta -%}
-      <meta charset="utf-8" />
-      {% block meta_generator %}<meta name="generator" content="ckan {{ h.ckan_version() }}" />{% endblock %}
-      {% block meta_viewport %}<meta name="viewport" content="width=device-width, initial-scale=1.0">{% endblock %}
+<head {% block headtag %}{% endblock %}>
+  {%- block meta -%}
+  <meta charset="utf-8" />
+  {% block meta_generator %}
+  <meta name="generator" content="ckan {{ h.ckan_version() }}" />{% endblock %}
+  {% block meta_viewport %}
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">{% endblock %}
+  {%- endblock -%}
+
+  <title>
+    {%- block title -%}
+    {%- block subtitle %}{% endblock -%}
+    {%- if self.subtitle()|trim %} {{ g.template_title_deliminater }} {% endif -%}
+    {{ h.scheming_language_text(h.cioos_load_json(g.site_title)) }}
     {%- endblock -%}
+  </title>
 
-    <title>
-      {%- block title -%}
-      {%- block subtitle %}{% endblock -%}
-      {%- if self.subtitle()|trim %} {{ g.template_title_deliminater }} {% endif -%}
-      {{ h.scheming_language_text(h.cioos_load_json(g.site_title)) }}
-      {%- endblock -%}
-    </title>
+  {% block links -%}
+  <link rel="shortcut icon" href="{{ g.favicon }}" />
+  {% endblock -%}
 
-    {% block links -%}
-      <link rel="shortcut icon" href="{{ g.favicon }}" />
-    {% endblock -%}
+  {%- block styles %}
+  {# TODO: store just name of asset instead of path to it. #}
+  {% set theme = h.get_rtl_css() if h.is_rtl_language() else config.get('ckan.theme', 'css/main') %}
+  {# strip '/base/' prefix and '.css' suffix #}
+  {% if theme %}{% asset theme[6:-4] %}{% endif %}
+  {% endblock %}
 
-    {%- block styles %}
-      {# TODO: store just name of asset instead of path to it. #}
-      {% set main_css = h.get_rtl_css() if h.is_rtl_language() else g.main_css %}
-      {# strip '/base/' prefix and '.css' suffix #}
-      {% asset main_css[6:-4] %}
-    {% endblock %}
+  {# render all assets included in styles block #}
+  {{ h.render_assets('style') }}
 
-    {# render all assets included in styles block #}
-    {{ h.render_assets('style') }}
+  <link rel="stylesheet" type="text/css" href="{{h.url_for_static('/cioos_theme.css')}}" />
+  {% if h.cioos_get_additional_css_path() %}
+  <link rel="stylesheet" type="text/css" href="{{h.url_for_static(h.cioos_get_additional_css_path())}}" />
+  {% endif %}
+  {#
+  <link
+    href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900|Quicksand:300,400,600|PT+Sans:400|Raleway:400&display=swap"
+    rel="stylesheet"> #}
 
-    <link rel="stylesheet" type="text/css" href="{{h.url_for_static('/cioos_theme.css')}}" />
-    {% if h.cioos_get_additional_css_path() %}
-    <link rel="stylesheet" type="text/css" href="{{h.url_for_static(h.cioos_get_additional_css_path())}}" />
-    {% endif %}
-    {# <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900|Quicksand:300,400,600|PT+Sans:400|Raleway:400&display=swap" rel="stylesheet"> #}
+  {% block head_extras %}
+  {# defined in the config.ini under "ckan.template_head_end" #}
+  {{ g.template_head_end | safe }}
+  {% endblock %}
 
-    {% block head_extras %}
-      {# defined in the config.ini under "ckan.template_head_end" #}
-      {{ g.template_head_end | safe }}
-    {% endblock %}
+  {%- block custom_styles %}
+  {%- if g.site_custom_css -%}
+  <style>
+    {
+        {
+        g.site_custom_css | safe
+      }
+    }
+  </style>
+  {%- endif %}
+  {% endblock %}
+</head>
 
-    {%- block custom_styles %}
-      {%- if g.site_custom_css -%}
-      <style>
-        {{ g.site_custom_css | safe }}
-      </style>
-      {%- endif %}
-    {% endblock %}
-  </head>
+<body {% block bodytag %} data-site-root="{{ h.url_for('/', locale='default', qualified=true) }}"
+  data-locale-root="{{ h.url_for('/', qualified=true) }}" {% endblock %}>
 
-  <body {% block bodytag %} data-site-root="{{ h.url_for('/', locale='default', qualified=true) }}" data-locale-root="{{ h.url_for('/', qualified=true) }}" {% endblock %}>
+  {%- block page %}{% endblock -%}
 
-    {%- block page %}{% endblock -%}
+  {%- block scripts %}
+  {% endblock -%}
+  {% block body_extras -%}
+  {# defined in the config.ini under "ckan.template_footer_end" #}
+  {{ g.template_footer_end | safe }}
+  {%- endblock %}
 
-    {%- block scripts %}
-    {% endblock -%}
-    {% block body_extras -%}
-      {# defined in the config.ini under "ckan.template_footer_end" #}
-      {{ g.template_footer_end | safe }}
-    {%- endblock %}
+  {# render all assets included in scripts block and everywhere else #}
+  {# make sure there are no calls to `asset` tag after this point #}
+  {{ h.render_assets('style') }}
+  {{ h.render_assets('script') }}
+</body>
 
-    {# render all assets included in scripts block and everywhere else #}
-    {# make sure there are no calls to `asset` tag after this point #}
-    {{ h.render_assets('style') }}
-    {{ h.render_assets('script') }}
-  </body>
 </html>
